--- a/google-style.css
+++ b/google-style.css
@@ -361,19 +361,19 @@ section {
 
 .box{
   display: block;
-  flex-wrap: wrap;
-  width: 50%;
+  width: 100%;
   justify-content: center;
 }
 
 .box input[type="search"] {
-  display: inline-block;
-  width: 100%;
-  height: 3em;
+  display: block;
+  width: 50%;
+  height: 45px;
   margin: 0 auto;
   box-shadow: 0 3px 5px -2px rgba(122,122,122,0.2);
   border: 1px solid #D9D8D9;
   position: relative;
+  line-height: 50%;
 }
 
 input[type="search"]:hover {
@@ -383,46 +383,24 @@ input[type="search"]:hover {
 input[type="search"]:focus {
   box-shadow: 2px 2px 2px 2px rgba(122,122,122,0.5)!inherit;
   border-color: none;
+  padding-left: 15px;
 }
 
 .search-google {
   position: relative;
 }
 
-.keyboard {
-  display:block;
-  width: 25px;
-  height: 20px;
-  background-color: transparent;
-  background-image: url(img/keyboard-png-image-2476.png);
-  background-repeat: no-repeat;
-  background-size: 100%;
+svg {
   position: absolute;
-  z-index: 1100;
-  opacity: 0.7;
-  right: 70px;
-  top: 10px;
+  top: 17px;
+  left: 72%;
+  z-index: 1000;
+  opacity: 0.6;
 }
 
-.keyboard:hover {
+svg:hover {
   opacity: 1;
 }
-
-.microphono  {
-  display:block;
-  width: 40px;
-  height: 60px;
-  background-color: transparent;
-  background-color: transparent;
-  background-image: url(img/microfono-google-1280x1280.png);
-  background-repeat: no-repeat;
-  background-size: 75%;
-  position: absolute;
-  z-index: 1100;
-  top: 6px;
-  right: 10px;
-}
-
 
 input[type="button"]{
   background-color: #F2F2F2;
@@ -441,7 +419,7 @@ input[type="button"][value="Мне повезёт!"]{
 }
 
 input[type="button"][value="Поиск в Google"]{
-  margin-left: 25%;
+  margin-left: 38%;
 }
 
 input[type="button"]:hover{
